[metadata]
name = sdoml
author = Paul J. Wright
author_email = paul@pauljwright.co.uk
license = Apache Software License 2.0
license_file = licenses/LICENSE.rst
url = sdoml.org
description = sdoml dataset package
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
  dask
  ; gcsfs
  numpy
  pandas
  s3fs
  sunpy[all]
  torch>=1.8.0 # need to make sure this is a good way of doing things...
  zarr         # ... will it install the correct CUDA version??

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
all =
test =
    nb-black
    pytest
    pytest-doctestplus
    pytest-cov
    pre-commit
docs =
    jupyter
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
    nbsphinx
    sphinx_copybutton
    nbsphinx_link
    sphinx-toggleprompt

[tool:pytest]
testpaths = "sdoml" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  sdoml/__init*
  sdoml/conftest.py
  sdoml/*setup_package*
  sdoml/tests/*
  sdoml/*/tests/*
  sdoml/extern/*
  sdoml/version*
  */sdoml/__init*
  */sdoml/conftest.py
  */sdoml/*setup_package*
  */sdoml/tests/*
  */sdoml/*/tests/*
  */sdoml/extern/*
  */sdoml/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
